--- a/docs/final-report/intro.tex
+++ b/docs/final-report/intro.tex
@@ -11,7 +11,7 @@ Tematem niniejszej pracy jest gra sieciowa, w której rozgrywka prowadzona jest 
 
 Gra, o której mowa, jest klonem internetowej gry HaxBall\footnote{\url{http://www.haxball.com/}}. Jest to uproszczona wersja piłki nożnej, w której gracze wykorzystują tylko klawiaturę (strzałki oraz klawisz spacji aby dokonać kopnięcia w piłkę). Na rysunku \ref{fig:haxball} przedstawiono widok rozgrywki w grze.
 
-W internecie dostępnych jest wiele gier tego typu, \emph{casual} bo o tym typie mowa, stał się ostatnimi czasy bardzo popularny (np. Angry Birds\footnote{\url{http://chrome.angrybirds.com/}}). Jest to pierwszy z powodów, dla którego obraliśmy ten temat projektu. Drugim z powodów jest łatwość dekompozycji programu na niezależne (z punku wiedzenia pracy nad nimi) moduły, które mogą być osobno testowane, jednak na końcu dają się połączyć w jeden produkt. Łatwość dekompozycji pozwala również na prosty przydział poszczególnych prac dla programistów.
+W internecie dostępnych jest wiele gier tego typu, \emph{casual} bo o tym typie mowa, stał się ostatnimi czasy bardzo popularny (np. Angry Birds\footnote{\url{http://chrome.angrybirds.com/}}). Jest to pierwszy z powodów, dla którego obraliśmy ten temat projektu. Drugim z powodów jest łatwość dekompozycji programu na niezależne (z punktu wiedzenia pracy nad nimi) moduły, które mogą być osobno testowane, jednak na końcu dają się połączyć w jeden produkt. Łatwość dekompozycji pozwala również na prosty przydział poszczególnych prac dla programistów.
 
 
 
