--- a/docs/final-report/summary.tex
+++ b/docs/final-report/summary.tex
@@ -5,3 +5,29 @@ Podczas prac udało się zrealizować wszystkie cele, jednak system nadal można
 
 Podsumowując, praca zespołowa przyczynia się nie tylko do przyspieszenia procesu wytwarzania oprogramowania, ale również pozwala na lepszy i automatyczny rozwój umiejętności współpracowników.
 \pagebreak
+
+\begin{thebibliography}{9}
+\bibitem{PCL}
+  Peter Seibel
+  \emph{Practical Common Lisp}
+  Apress,
+  2009.
+
+  \bibitem{DIH}
+  Mark Pilgrim
+  \emph{Dive into HTML5}
+  http://diveintohtml5.info/
+
+  \bibitem{JQ}
+
+  \emph{jQuery Fundamentals}
+  http://jqfundamentals.com/chapter/javascript-basics
+  Bocoup.
+
+  \bibitem{SBCL}
+  \emph{Steel Bank Common Lisp Manual}
+  http://www.sbcl.org/manual/index.html
+
+\end{thebibliography}
+
+
